Bug 939835.  Fix up performance regressions from bug 937772.  r=h4writer

There are two changes here.

1) When trying to eliminate type barriers, skip over infallible
unboxes, not just barriered ones.

2) When we statically know a value is double or int but dynamically
we've only observed integers, keep allowing TI to barrier and
specialize to integer instead of forcing the value to be treatd as a
double.